--- a/index.html
+++ b/index.html
@@ -174,14 +174,61 @@
                   <div class="swiper">
                     <div class="slide-container">
                       <div class="card-wrapper swiper-wrapper">
-                        <div class="swiper-slide cart-donation">
-                          <div class="mb-1">
-                            <img src="img/food-badge.svg" alt="">
+                        <div class="swiper-slide">
+                          <div class="cart-donation">
+                            <div class="mb-1">
+                              <img src="img/food-badge.svg" alt="">
+                            </div>
+                            <div class="slide-title">Food boxes for Ukrainian families</div>
+                            <div class="slide-prise">$1+</div>
                           </div>
-                          <div class="slide-title">Food boxes for Ukrainian families</div>
-                          <div class="slide-prise">$1+</div>
                         </div>
-                        <div class="swiper-slide cart-donation">
+                        <div class="swiper-slide">
+                          <div class="cart-donation">
+                            <div class="mb-1">
+                              <img src="img/food-badge.svg" alt="">
+                            </div>
+                            <div class="slide-title">Food boxes for Ukrainian families</div>
+                            <div class="slide-prise">$1+</div>
+                          </div>
+                        </div>
+                        <div class="swiper-slide">
+                          <div class="cart-donation">
+                            <div class="mb-1">
+                              <img src="img/food-badge.svg" alt="">
+                            </div>
+                            <div class="slide-title">Food boxes for Ukrainian families</div>
+                            <div class="slide-prise">$1+</div>
+                          </div>
+                        </div>
+                        <div class="swiper-slide">
+                          <div class="cart-donation">
+                            <div class="mb-1">
+                              <img src="img/food-badge.svg" alt="">
+                            </div>
+                            <div class="slide-title">Food boxes for Ukrainian families</div>
+                            <div class="slide-prise">$1+</div>
+                          </div>
+                        </div>
+                        <div class="swiper-slide">
+                          <div class="cart-donation">
+                            <div class="mb-1">
+                              <img src="img/food-badge.svg" alt="">
+                            </div>
+                            <div class="slide-title">Food boxes for Ukrainian families</div>
+                            <div class="slide-prise">$1+</div>
+                          </div>
+                        </div>
+                        <div class="swiper-slide">
+                          <div class="cart-donation">
+                            <div class="mb-1">
+                              <img src="img/food-badge.svg" alt="">
+                            </div>
+                            <div class="slide-title">Food boxes for Ukrainian families</div>
+                            <div class="slide-prise">$1+</div>
+                          </div>
+                        </div>
+<!--                         <div class="swiper-slide cart-donation">
                           <div class="mb-1">
                             <img src="img/badge.svg" alt="" class="badge-silver">
                           </div>
@@ -236,7 +283,7 @@
                           </div>
                           <div class="slide-title">Food boxes for Ukrainian families</div>
                           <div class="slide-prise">$140+</div>
-                        </div>
+                        </div> -->
                       </div>
                     </div>
                     <div class="swiper-pagination"></div>
