--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <div class="col-md-10 col-lg-8 col-xl">
 
                   <div class="swiper">
-                    <div class="slide-container">
+                    <div class="slide-container" id="carousel">
                       <div class="card-wrapper swiper-wrapper">
                         <div class="swiper-slide">
                           <div class="cart-donation">
