--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               <div class="row justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl">
 
-                  <div class="swiper">
+<!--                   <div class="swiper">
                     <div class="slide-container" id="carousel">
                       <div class="card-wrapper swiper-wrapper">
                         <div class="swiper-slide">
@@ -228,7 +228,7 @@
                             <div class="slide-prise">$1+</div>
                           </div>
                         </div>
-<!--                         <div class="swiper-slide cart-donation">
+                        <div class="swiper-slide cart-donation">
                           <div class="mb-1">
                             <img src="img/badge.svg" alt="" class="badge-silver">
                           </div>
@@ -283,11 +283,11 @@
                           </div>
                           <div class="slide-title">Food boxes for Ukrainian families</div>
                           <div class="slide-prise">$140+</div>
-                        </div> -->
+                        </div>
                       </div>
                     </div>
                     <div class="swiper-pagination"></div>
-                  </div>
+                  </div> -->
 
                 </div>
               </div>
@@ -431,6 +431,47 @@
       </div>
     </div>
   </section>
+
+
+
+
+
+<div class="page-container">
+  <div id="carousel" class="swiper-container swiper-container-horizontal">
+    <ul class="swiper-wrapper">
+      <li class="swiper-slide globocom-slide">
+        <a href="#!" class="menu-carousel-link">Globo.com</a>
+      </li>
+      <li class="swiper-slide g1-slide">
+        <a href="#!" class="menu-carousel-link">G1</a>
+      </li>
+      <li class="swiper-slide globoesporte-slide">
+        <a href="#!" class="menu-carousel-link">Globoesporte</a>
+      </li>
+      <li class="swiper-slide famosos-slide">
+        <a href="#!" class="menu-carousel-link">Famosos</a>
+      </li>
+      <li class="swiper-slide techtudo-slide">
+        <a href="#!" class="menu-carousel-link">Techtudo</a>
+      </li>
+      <li class="swiper-slide gshow-slide">
+        <a href="#!" class="menu-carousel-link">Gshow</a>
+      </li>
+    </ul>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
 
   <footer class="footer">
     <div class="container">
