--- a/index.html
+++ b/index.html
@@ -289,6 +289,56 @@
                     <div class="swiper-pagination"></div>
                   </div> -->
 
+<div class="page-container">
+  <div id="carousel" class="swiper-container swiper-container-horizontal">
+    <ul class="swiper-wrapper">
+      <li class="swiper-slide globocom-slide">
+        <a href="#!" class="menu-carousel-link">Globo.com</a>
+      </li>
+      <li class="swiper-slide g1-slide">
+        <a href="#!" class="menu-carousel-link">G1</a>
+      </li>
+      <li class="swiper-slide globoesporte-slide">
+        <a href="#!" class="menu-carousel-link">Globoesporte</a>
+      </li>
+      <li class="swiper-slide famosos-slide">
+        <a href="#!" class="menu-carousel-link">Famosos</a>
+      </li>
+      <li class="swiper-slide techtudo-slide">
+        <a href="#!" class="menu-carousel-link">Techtudo</a>
+      </li>
+      <li class="swiper-slide gshow-slide">
+        <a href="#!" class="menu-carousel-link">Gshow</a>
+      </li>
+    </ul>
+  </div>
+  <div class="swiper-pagination"></div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
                 </div>
               </div>
               <div class="row justify-content-center">
@@ -431,47 +481,6 @@
       </div>
     </div>
   </section>
-
-
-
-
-
-<div class="page-container">
-  <div id="carousel" class="swiper-container swiper-container-horizontal">
-    <ul class="swiper-wrapper">
-      <li class="swiper-slide globocom-slide">
-        <a href="#!" class="menu-carousel-link">Globo.com</a>
-      </li>
-      <li class="swiper-slide g1-slide">
-        <a href="#!" class="menu-carousel-link">G1</a>
-      </li>
-      <li class="swiper-slide globoesporte-slide">
-        <a href="#!" class="menu-carousel-link">Globoesporte</a>
-      </li>
-      <li class="swiper-slide famosos-slide">
-        <a href="#!" class="menu-carousel-link">Famosos</a>
-      </li>
-      <li class="swiper-slide techtudo-slide">
-        <a href="#!" class="menu-carousel-link">Techtudo</a>
-      </li>
-      <li class="swiper-slide gshow-slide">
-        <a href="#!" class="menu-carousel-link">Gshow</a>
-      </li>
-    </ul>
-  </div>
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
 
   <footer class="footer">
     <div class="container">
