--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
               <div class="row justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl">
 
-<!--                   <div class="swiper">
+                  <div class="swiper">
                     <div class="slide-container" id="carousel">
                       <div class="card-wrapper swiper-wrapper">
                         <div class="swiper-slide">
                           <div class="cart-donation">
                             <div class="mb-1">
-                              <img src="img/food-badge.svg" alt="">
+                              <!-- <img src="img/food-badge.svg" alt=""> -->
                             </div>
                             <div class="slide-title">Food boxes for Ukrainian families</div>
                             <div class="slide-prise">$1+</div>
@@ -186,7 +186,7 @@
                         <div class="swiper-slide">
                           <div class="cart-donation">
                             <div class="mb-1">
-                              <img src="img/food-badge.svg" alt="">
+                              <!-- <img src="img/food-badge.svg" alt=""> -->
                             </div>
                             <div class="slide-title">Food boxes for Ukrainian families</div>
                             <div class="slide-prise">$1+</div>
@@ -195,7 +195,7 @@
                         <div class="swiper-slide">
                           <div class="cart-donation">
                             <div class="mb-1">
-                              <img src="img/food-badge.svg" alt="">
+                              <!-- <img src="img/food-badge.svg" alt=""> -->
                             </div>
                             <div class="slide-title">Food boxes for Ukrainian families</div>
                             <div class="slide-prise">$1+</div>
@@ -204,7 +204,7 @@
                         <div class="swiper-slide">
                           <div class="cart-donation">
                             <div class="mb-1">
-                              <img src="img/food-badge.svg" alt="">
+                              <!-- <img src="img/food-badge.svg" alt=""> -->
                             </div>
                             <div class="slide-title">Food boxes for Ukrainian families</div>
                             <div class="slide-prise">$1+</div>
@@ -213,7 +213,7 @@
                         <div class="swiper-slide">
                           <div class="cart-donation">
                             <div class="mb-1">
-                              <img src="img/food-badge.svg" alt="">
+                              <!-- <img src="img/food-badge.svg" alt=""> -->
                             </div>
                             <div class="slide-title">Food boxes for Ukrainian families</div>
                             <div class="slide-prise">$1+</div>
@@ -222,13 +222,13 @@
                         <div class="swiper-slide">
                           <div class="cart-donation">
                             <div class="mb-1">
-                              <img src="img/food-badge.svg" alt="">
+                              <!-- <img src="img/food-badge.svg" alt=""> -->
                             </div>
                             <div class="slide-title">Food boxes for Ukrainian families</div>
                             <div class="slide-prise">$1+</div>
                           </div>
                         </div>
-                        <div class="swiper-slide cart-donation">
+<!--                         <div class="swiper-slide cart-donation">
                           <div class="mb-1">
                             <img src="img/badge.svg" alt="" class="badge-silver">
                           </div>
@@ -283,13 +283,13 @@
                           </div>
                           <div class="slide-title">Food boxes for Ukrainian families</div>
                           <div class="slide-prise">$140+</div>
-                        </div>
+                        </div> -->
                       </div>
                     </div>
                     <div class="swiper-pagination"></div>
-                  </div> -->
+                  </div>
 
-<div class="page-container">
+<!-- <div class="page-container">
   <div id="carousel" class="swiper-container swiper-container-horizontal">
     <ul class="swiper-wrapper">
       <li class="swiper-slide globocom-slide">
@@ -313,7 +313,7 @@
     </ul>
   </div>
   <div class="swiper-pagination"></div>
-</div>
+</div> -->
 
 
 
