--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                         <div class="swiper-slide">
                           <div class="cart-donation">
                             <div class="mb-1">
-                              <!-- <img src="img/food-badge.svg" alt=""> -->
+                              <img src="img/food-badge.svg" alt="">
                             </div>
                             <div class="slide-title">Food boxes for Ukrainian families</div>
                             <div class="slide-prise">$1+</div>
@@ -186,7 +186,7 @@
                         <div class="swiper-slide">
                           <div class="cart-donation">
                             <div class="mb-1">
-                              <!-- <img src="img/food-badge.svg" alt=""> -->
+                              <img src="img/food-badge.svg" alt="">
                             </div>
                             <div class="slide-title">Food boxes for Ukrainian families</div>
                             <div class="slide-prise">$1+</div>
@@ -195,7 +195,7 @@
                         <div class="swiper-slide">
                           <div class="cart-donation">
                             <div class="mb-1">
-                              <!-- <img src="img/food-badge.svg" alt=""> -->
+                              <img src="img/food-badge.svg" alt="">
                             </div>
                             <div class="slide-title">Food boxes for Ukrainian families</div>
                             <div class="slide-prise">$1+</div>
@@ -204,7 +204,7 @@
                         <div class="swiper-slide">
                           <div class="cart-donation">
                             <div class="mb-1">
-                              <!-- <img src="img/food-badge.svg" alt=""> -->
+                              <img src="img/food-badge.svg" alt="">
                             </div>
                             <div class="slide-title">Food boxes for Ukrainian families</div>
                             <div class="slide-prise">$1+</div>
@@ -213,7 +213,7 @@
                         <div class="swiper-slide">
                           <div class="cart-donation">
                             <div class="mb-1">
-                              <!-- <img src="img/food-badge.svg" alt=""> -->
+                              <img src="img/food-badge.svg" alt="">
                             </div>
                             <div class="slide-title">Food boxes for Ukrainian families</div>
                             <div class="slide-prise">$1+</div>
@@ -222,7 +222,7 @@
                         <div class="swiper-slide">
                           <div class="cart-donation">
                             <div class="mb-1">
-                              <!-- <img src="img/food-badge.svg" alt=""> -->
+                              <img src="img/food-badge.svg" alt="">
                             </div>
                             <div class="slide-title">Food boxes for Ukrainian families</div>
                             <div class="slide-prise">$1+</div>
