--- a/index.html
+++ b/index.html
@@ -186,10 +186,19 @@
                         <div class="swiper-slide">
                           <div class="cart-donation">
                             <div class="mb-1">
-                              <img src="img/food-badge.png" alt="">
+                              <img src="img/badge.png" alt="">
                             </div>
                             <div class="slide-title">Food boxes for Ukrainian families</div>
-                            <div class="slide-prise">$1+</div>
+                            <div class="slide-prise">$25+</div>
+                          </div>
+                        </div>
+                        <div class="swiper-slide">
+                          <div class="cart-donation">
+                            <div class="mb-1">
+                              <img src="img/badge-silver.png" alt="">
+                            </div>
+                            <div class="slide-title">Food boxes for Ukrainian families</div>
+                            <div class="slide-prise">$50+</div>
                           </div>
                         </div>
                         <div class="swiper-slide">
@@ -198,7 +207,7 @@
                               <img src="img/food-badge.png" alt="">
                             </div>
                             <div class="slide-title">Food boxes for Ukrainian families</div>
-                            <div class="slide-prise">$1+</div>
+                            <div class="slide-prise">$75+</div>
                           </div>
                         </div>
                         <div class="swiper-slide">
@@ -207,7 +216,7 @@
                               <img src="img/food-badge.png" alt="">
                             </div>
                             <div class="slide-title">Food boxes for Ukrainian families</div>
-                            <div class="slide-prise">$1+</div>
+                            <div class="slide-prise">$100+</div>
                           </div>
                         </div>
                         <div class="swiper-slide">
@@ -216,129 +225,14 @@
                               <img src="img/food-badge.png" alt="">
                             </div>
                             <div class="slide-title">Food boxes for Ukrainian families</div>
-                            <div class="slide-prise">$1+</div>
+                            <div class="slide-prise">$125+</div>
                           </div>
                         </div>
-                        <div class="swiper-slide">
-                          <div class="cart-donation">
-                            <div class="mb-1">
-                              <img src="img/food-badge.png" alt="">
-                            </div>
-                            <div class="slide-title">Food boxes for Ukrainian families</div>
-                            <div class="slide-prise">$1+</div>
-                          </div>
-                        </div>
-<!--                         <div class="swiper-slide cart-donation">
-                          <div class="mb-1">
-                            <img src="img/badge.svg" alt="" class="badge-silver">
-                          </div>
-                          <div class="slide-title">Food boxes for Ukrainian families</div>
-                          <div class="slide-prise">$25+</div>
-                        </div>
-                        <div class="swiper-slide cart-donation">
-                          <div class="mb-1">
-                            <img src="img/badge-silver.svg" alt="" class="badge-silver">
-                          </div>
-                          <div class="slide-title">Food boxes for Ukrainian families</div>
-                          <div class="slide-prise">$50+</div>
-                        </div>
-                        <div class="swiper-slide cart-donation">
-                          <div class="mb-1">
-                            <img src="img/food-badge.svg" alt="">
-                          </div>
-                          <div class="slide-title">Food boxes for Ukrainian families</div>
-                          <div class="slide-prise">$75+</div>
-                        </div>
-                        <div class="swiper-slide cart-donation">
-                          <div class="mb-1">
-                            <img src="img/food-badge.svg" alt="">
-                          </div>
-                          <div class="slide-title">Food boxes for Ukrainian families</div>
-                          <div class="slide-prise">$100+</div>
-                        </div>
-                        <div class="swiper-slide cart-donation">
-                          <div class="mb-1">
-                            <img src="img/food-badge.svg" alt="">
-                          </div>
-                          <div class="slide-title">Food boxes for Ukrainian families</div>
-                          <div class="slide-prise">$110+</div>
-                        </div>
-                        <div class="swiper-slide cart-donation">
-                          <div class="mb-1">
-                            <img src="img/food-badge.svg" alt="">
-                          </div>
-                          <div class="slide-title">Food boxes for Ukrainian families</div>
-                          <div class="slide-prise">$120+</div>
-                        </div>
-                        <div class="swiper-slide cart-donation">
-                          <div class="mb-1">
-                            <img src="img/food-badge.svg" alt="">
-                          </div>
-                          <div class="slide-title">Food boxes for Ukrainian families</div>
-                          <div class="slide-prise">$130+</div>
-                        </div>
-                        <div class="swiper-slide cart-donation">
-                          <div class="mb-1">
-                            <img src="img/food-badge.svg" alt="">
-                          </div>
-                          <div class="slide-title">Food boxes for Ukrainian families</div>
-                          <div class="slide-prise">$140+</div>
-                        </div> -->
                       </div>
                     </div>
                     <div class="swiper-pagination"></div>
                   </div>
-
-<!-- <div class="page-container">
-  <div id="carousel" class="swiper-container swiper-container-horizontal">
-    <ul class="swiper-wrapper">
-      <li class="swiper-slide globocom-slide">
-        <a href="#!" class="menu-carousel-link">Globo.com</a>
-      </li>
-      <li class="swiper-slide g1-slide">
-        <a href="#!" class="menu-carousel-link">G1</a>
-      </li>
-      <li class="swiper-slide globoesporte-slide">
-        <a href="#!" class="menu-carousel-link">Globoesporte</a>
-      </li>
-      <li class="swiper-slide famosos-slide">
-        <a href="#!" class="menu-carousel-link">Famosos</a>
-      </li>
-      <li class="swiper-slide techtudo-slide">
-        <a href="#!" class="menu-carousel-link">Techtudo</a>
-      </li>
-      <li class="swiper-slide gshow-slide">
-        <a href="#!" class="menu-carousel-link">Gshow</a>
-      </li>
-    </ul>
-  </div>
-  <div class="swiper-pagination"></div>
-</div> -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+                  
                 </div>
               </div>
               <div class="row justify-content-center">
